objects/ddcAssess__Assessment_Summary__c.object
<CustomObject>
    <fields>
        <fullName>ddcAssess__Batch_Id__c</fullName>
        <description>Batch id of the currently running or last batch job. Will cycle through batches for Account, Contact, and Lead.</description>
        <label>Batch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Dupe_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was the assessment run with duplicate check enabled</description>
        <label>Dupe Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Error_Count__c</fullName>
        <label>Error Count</label>
        <summarizedField>ddcAssess__Entity_Assessment__c.ddcAssess__Error_Count__c</summarizedField>
        <summaryForeignKey>ddcAssess__Entity_Assessment__c.ddcAssess__Assessment_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Failed_pcnt__c</fullName>
        <formula>IF(ddcAssess__Total__c &gt; 0,ddcAssess__Error_Count__c / ddcAssess__Total__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Failed %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Total__c</fullName>
        <label>Total</label>
        <summarizedField>ddcAssess__Entity_Assessment__c.ddcAssess__Total__c</summarizedField>
        <summaryForeignKey>ddcAssess__Entity_Assessment__c.ddcAssess__Assessment_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Assessment Summary</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Assessment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>